--- a/daemon-slayer/Cargo.toml
+++ b/daemon-slayer/Cargo.toml
@@ -5,6 +5,9 @@ version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+tokio-signals = ["tokio", "signal-hook-tokio"]
+
 [dependencies]
 clap = "3.2.17"
 futures = "0.3.23"
@@ -16,9 +19,9 @@ windows-service = "0.5"
 
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3.14"
-signal-hook-tokio = {version = "0.3.1", features = ["futures-v0_3"]}
+signal-hook-tokio = {version = "0.3.1", features = ["futures-v0_3"], optional = true}
 systemd_client = {git = "https://github.com/aschey/systemd-client", rev = "acd8edf737de8bd1b57df65e5d333f2c73c76060"}
-tokio = {version = "1.20.1", features = ["rt-multi-thread"]}
+tokio = {version = "1.20.1", features = ["rt-multi-thread"], optional = true}
 
 [target.'cfg(target_os = "macos")'.dependencies]
 launchd = "0.2.0"
