--- a/daemon-slayer/Cargo.toml
+++ b/daemon-slayer/Cargo.toml
@@ -11,9 +11,11 @@ default = ["async-tokio"]
 
 [dependencies]
 clap = "3.2.17"
+eyre = "0.6.8"
 futures = "0.3.23"
 paste = "1.0.8"
 tokio = {version = "1.20.1", features = ["rt-multi-thread"], optional = true}
+tracing = "0.1.36"
 
 [target.'cfg(windows)'.dependencies]
 ctrlc = "3.2.2"
@@ -22,7 +24,7 @@ windows-service = "0.5"
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3.14"
 signal-hook-tokio = {version = "0.3.1", features = ["futures-v0_3"], optional = true}
-systemd_client = {git = "https://github.com/aschey/systemd-client", rev = "acd8edf737de8bd1b57df65e5d333f2c73c76060"}
+systemd_client = {git = "https://github.com/aschey/systemd-client", rev = "964f544fe7a24dc59429f3534f8b58fd13a7d627"}
 
 [target.'cfg(target_os = "macos")'.dependencies]
 launchd = "0.2.0"
