--- a/daemon-slayer/Cargo.toml
+++ b/daemon-slayer/Cargo.toml
@@ -6,19 +6,22 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-async-tokio = ["tokio", "signal-hook-tokio"]
-default = ["async-tokio"]
+async-tokio = ["tokio", "signal-hook-tokio", "async-trait"]
+default = ["sync"]
+#default = ["async-tokio"]
+sync = ["ctrlc"]
 
 [dependencies]
+async-trait = {version = "0.1.57", optional = true}
 clap = "3.2.17"
 eyre = "0.6.8"
 futures = "0.3.23"
 paste = "1.0.8"
-tokio = {version = "1.20.1", features = ["rt-multi-thread"], optional = true}
+tokio = {version = "1.20.1", features = ["rt-multi-thread", "signal"], optional = true}
 tracing = "0.1.36"
 
 [target.'cfg(windows)'.dependencies]
-ctrlc = "3.2.2"
+ctrlc = {version = "3.2.2", optional = true}
 windows-service = "0.5"
 
 [target.'cfg(unix)'.dependencies]
