--- a/testapp/Cargo.toml
+++ b/testapp/Cargo.toml
@@ -3,8 +3,10 @@ edition = "2021"
 name = "testapp"
 version = "0.1.0"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
+[features]
+async-tokio = ["tokio", "daemon-slayer/async-tokio"]
+default = ["sync"]
+sync = ["daemon-slayer/sync"]
 [dependencies]
-daemon-slayer = {path = "../daemon-slayer"}
-tokio = {version = "1.20.1", features = ["rt-multi-thread", "macros", "sync"]}
+daemon-slayer = {path = "../daemon-slayer", default_features = false}
+tokio = {version = "1.20.1", features = ["rt-multi-thread", "macros", "sync"], optional = true}
