--- a/daemon-slayer/Cargo.toml
+++ b/daemon-slayer/Cargo.toml
@@ -7,9 +7,6 @@ version = "0.1.0"
 
 [features]
 async-tokio = ["tokio", "signal-hook-tokio", "async-trait"]
-default = ["sync"]
-#default = ["async-tokio"]
-sync = ["ctrlc"]
 
 [dependencies]
 async-trait = {version = "0.1.57", optional = true}
@@ -17,17 +14,17 @@ clap = "3.2.17"
 eyre = "0.6.8"
 futures = "0.3.23"
 paste = "1.0.8"
-tokio = {version = "1.20.1", features = ["rt-multi-thread", "signal"], optional = true}
+signal-hook = "0.3.14"
 tracing = "0.1.36"
 
 [target.'cfg(windows)'.dependencies]
-ctrlc = {version = "3.2.2", optional = true}
+tokio = {version = "1.20.1", features = ["rt-multi-thread", "signal"], optional = true}
 windows-service = "0.5"
 
 [target.'cfg(unix)'.dependencies]
-signal-hook = "0.3.14"
 signal-hook-tokio = {version = "0.3.1", features = ["futures-v0_3"], optional = true}
 systemd_client = {git = "https://github.com/aschey/systemd-client", rev = "964f544fe7a24dc59429f3534f8b58fd13a7d627"}
+tokio = {version = "1.20.1", features = ["rt-multi-thread"], optional = true}
 
 [target.'cfg(target_os = "macos")'.dependencies]
 launchd = "0.2.0"
