--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,25 +6,32 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-async-tokio = ["tokio", "signal-hook-tokio", "async-trait"]
-default = ["async-tokio"]
+async-tokio = ["tokio", "signal-hook-tokio", "async-trait", "futures"]
+default = ["async-tokio", "logging"]
 direct = ["signal-hook"]
+logging = ["tracing-appender", "tracing-error", "tracing-subscriber", "time"]
 
 [dependencies]
 async-trait = {version = "0.1.57", optional = true}
 clap = "3.2.17"
+directories = "4.0.1"
 eyre = "0.6.8"
-futures = "0.3.23"
+futures = {version = "0.3.23", optional = true}
 paste = "1.0.8"
+time = {version = "0.3.13", optional = true}
 tracing = "0.1.36"
+tracing-appender = {version = "0.2.2", optional = true}
+tracing-error = {version = "0.2.0", optional = true}
+tracing-subscriber = {version = "0.3.15", features = ["local-time", "env-filter"], optional = true}
 
 [[bin]]
 name = "bin_fixture"
 
 [target.'cfg(windows)'.dependencies]
+regex = "1.6.0"
 signal-hook = {version = "0.3.14", optional = true}
 tokio = {version = "1.20.1", features = ["rt-multi-thread", "signal"], optional = true}
-windows-service = "0.5"
+windows-service = {git = "https://github.com/aschey/windows-service-rs", rev = "467408c9aba7d8221e5cf5a9992765ad7abeeb55"}
 
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3.14"
