--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ name = "bin_fixture"
 regex = "1.6.0"
 signal-hook = {version = "0.3.14", optional = true}
 tokio = {version = "1.20.1", features = ["rt-multi-thread", "signal"], optional = true}
+tracing-eventlog = {git = "https://github.com/aschey/tracing-eventlog", rev = "e87ec17edfb374101e1a9bda14b0e5b534d1cc56"}
 windows-service = {git = "https://github.com/aschey/windows-service-rs", rev = "467408c9aba7d8221e5cf5a9992765ad7abeeb55"}
 
 [target.'cfg(unix)'.dependencies]
