--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,11 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
+        include:
+          - os: macos-latest
+            sudo: sudo
+          - os: ubuntu-latest
+            sudo: sudo
       fail-fast: false
     name: Build and test
     runs-on: ${{ matrix.os }}
@@ -19,4 +24,4 @@ jobs:
       - name: test
         run: |
           cargo install cargo-hack
-          sudo cargo hack --feature-powerset test -- --nocapture
+          ${{ matrix.sudo }} cargo hack --feature-powerset test -- --nocapture
