--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,6 @@
 [env]
 CARGO_WORKSPACE_DIR = {value = "", relative = true}
+[target.x86_64-unknown-linux-gnu]
+runner = 'sudo -E'
+[target.x86_64-apple-darwin]
+runner = 'sudo'
