--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,23 +6,28 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-async-tokio = ["tokio", "signal-hook-tokio", "async-trait", "futures"]
-default = ["async-tokio", "logging"]
-direct = ["signal-hook"]
+async-tokio = ["tokio", "signal-hook-tokio", "async-trait", "futures", "daemon-slayer-macros/async", "maybe-async/is_async"]
+cli = ["clap"]
+console = ["tui"]
+default = ["async-tokio", "logging", "cli", "console", "direct"]
+direct = ["signal-hook", "daemon-slayer-macros/direct"]
 logging = ["tracing-appender", "tracing-error", "tracing-subscriber", "tracing-eventlog", "time"]
 
 [dependencies]
 async-trait = {version = "0.1.57", optional = true}
-clap = "3.2.17"
+clap = {version = "3.2.17", features = ["cargo"], optional = true}
+daemon-slayer-macros = {path = "./daemon-slayer-macros"}
 directories = "4.0.1"
 eyre = "0.6.8"
 futures = {version = "0.3.23", optional = true}
+maybe-async = {git = "https://github.com/aschey/maybe-async-rs", rev = "36bb795e18e88aa0642164934d50d8c5ee05e26f", features = ["default_sync"]}
 paste = "1.0.8"
 time = {version = "0.3.13", optional = true}
 tracing = "0.1.36"
 tracing-appender = {version = "0.2.2", optional = true}
 tracing-error = {version = "0.2.0", optional = true}
 tracing-subscriber = {version = "0.3.15", features = ["local-time", "env-filter"], optional = true}
+tui = {version = "0.19.0", optional = true}
 
 [[bin]]
 name = "bin_fixture"
