--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 [features]
 async-tokio = ["tokio", "signal-hook-tokio", "async-trait", "futures", "daemon-slayer-macros/async", "maybe-async/is_async"]
 cli = ["clap"]
-console = ["tui"]
+console = ["tui", "crossterm"]
 default = ["async-tokio", "logging", "cli", "console", "direct"]
 direct = ["signal-hook", "daemon-slayer-macros/direct"]
 logging = ["tracing-appender", "tracing-error", "tracing-subscriber", "tracing-eventlog", "time"]
@@ -16,6 +16,7 @@ logging = ["tracing-appender", "tracing-error", "tracing-subscriber", "tracing-e
 [dependencies]
 async-trait = {version = "0.1.57", optional = true}
 clap = {version = "3.2.17", features = ["cargo"], optional = true}
+crossterm = {version = "0.25.0", optional = true}
 daemon-slayer-macros = {path = "./daemon-slayer-macros"}
 directories = "4.0.1"
 eyre = "0.6.8"
