--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,54 +3,36 @@ edition = "2021"
 name = "daemon-slayer"
 version = "0.1.0"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[workspace]
+members = ["daemon-slayer-macros", "daemon-slayer-client", "daemon-slayer-server", "daemon-slayer-cli"]
 
 [features]
-async-tokio = ["tokio", "signal-hook-tokio", "async-trait", "futures", "daemon-slayer-macros/async", "maybe-async/is_async"]
-cli = ["clap"]
-console = ["tui", "crossterm"]
-default = ["async-tokio", "logging", "cli", "console", "direct"]
-direct = ["signal-hook", "daemon-slayer-macros/direct"]
-logging = ["tracing-appender", "tracing-error", "tracing-subscriber", "tracing-eventlog", "time"]
+all = ["console", "direct", "logging", "async-tokio"]
+async-tokio = [
+  "tokio",
+  "daemon-slayer-server/async-tokio",
+  "daemon-slayer-cli/async-tokio",
+  "maybe-async/is_async",
+  "async-trait",
+  "futures",
+]
+console = ["daemon-slayer-cli/console"]
+direct = ["daemon-slayer-server/direct", "daemon-slayer-cli/direct"]
+logging = ["daemon-slayer-server/logging", "tracing-subscriber"]
 
 [dependencies]
 async-trait = {version = "0.1.57", optional = true}
-clap = {version = "3.2.17", features = ["cargo"], optional = true}
-crossterm = {version = "0.25.0", optional = true}
-daemon-slayer-macros = {path = "./daemon-slayer-macros"}
-directories = "4.0.1"
-eyre = "0.6.8"
+daemon-slayer-cli = {path = "./daemon-slayer-cli", default-features = false}
+daemon-slayer-client = {path = "./daemon-slayer-client", default-features = false}
+daemon-slayer-server = {path = "./daemon-slayer-server", default-features = false}
 futures = {version = "0.3.23", optional = true}
 maybe-async = {git = "https://github.com/aschey/maybe-async-rs", rev = "36bb795e18e88aa0642164934d50d8c5ee05e26f", features = ["default_sync"]}
-paste = "1.0.8"
-time = {version = "0.3.13", optional = true}
+tokio = {version = "1.20.1", features = ["rt-multi-thread"], optional = true}
 tracing = "0.1.36"
-tracing-appender = {version = "0.2.2", optional = true}
-tracing-error = {version = "0.2.0", optional = true}
 tracing-subscriber = {version = "0.3.15", features = ["local-time", "env-filter"], optional = true}
-tui = {version = "0.19.0", optional = true}
 
 [[bin]]
 name = "bin_fixture"
-
-[target.'cfg(windows)'.dependencies]
-regex = "1.6.0"
-signal-hook = {version = "0.3.14", optional = true}
-tokio = {version = "1.20.1", features = ["rt-multi-thread", "signal"], optional = true}
-tracing-eventlog = {git = "https://github.com/aschey/tracing-eventlog", rev = "e87ec17edfb374101e1a9bda14b0e5b534d1cc56", optional = true}
-windows-service = {git = "https://github.com/aschey/windows-service-rs", rev = "467408c9aba7d8221e5cf5a9992765ad7abeeb55"}
-
-[target.'cfg(unix)'.dependencies]
-signal-hook = "0.3.14"
-signal-hook-tokio = {version = "0.3.1", features = ["futures-v0_3"], optional = true}
-tokio = {version = "1.20.1", features = ["rt-multi-thread"], optional = true}
-
-[target.'cfg(target_os="linux")'.dependencies]
-sd-notify = "0.4.0"
-systemd_client = {git = "https://github.com/aschey/systemd-client", rev = "5402ac4722cd6c0cf3c0f277c382ba20a1f5b3e6"}
-
-[target.'cfg(target_os = "macos")'.dependencies]
-launchd = "0.2.0"
 
 [dev-dependencies]
 assert_cmd = "2.0.4"
