--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,3 +1,6 @@
+[config]
+default_to_workspace = false
+
 [tasks.test]
 args = ["hack", "--feature-powerset", "test", "--", "--nocapture"]
 clear = true
