--- a/daemon-slayer-client/Cargo.toml
+++ b/daemon-slayer-client/Cargo.toml
@@ -14,4 +14,5 @@ windows-service = {git = "https://github.com/aschey/windows-service-rs", rev = "
 systemd_client = {git = "https://github.com/aschey/systemd-client", rev = "5402ac4722cd6c0cf3c0f277c382ba20a1f5b3e6"}
 
 [target.'cfg(target_os = "macos")'.dependencies]
+directories = "4.0.1"
 launchd = "0.2.0"
