--- a/daemon-slayer-cli/Cargo.toml
+++ b/daemon-slayer-cli/Cargo.toml
@@ -5,15 +5,18 @@ version = "0.1.0"
 
 [features]
 async-tokio = ["tokio", "async-trait", "futures", "maybe-async/is_async"]
+client = ["daemon-slayer-client"]
 console = ["tui", "crossterm"]
+default = ["client", "server"]
 direct = []
+server = ["daemon-slayer-server"]
 
 [dependencies]
 async-trait = {version = "0.1.57", optional = true}
 clap = {version = "3.2.17", features = ["cargo"]}
 crossterm = {version = "0.25.0", optional = true}
-daemon-slayer-client = {path = "../daemon-slayer-client"}
-daemon-slayer-server = {path = "../daemon-slayer-server"}
+daemon-slayer-client = {path = "../daemon-slayer-client", optional = true}
+daemon-slayer-server = {path = "../daemon-slayer-server", optional = true}
 eyre = "0.6.8"
 futures = {version = "0.3.23", optional = true}
 maybe-async = {git = "https://github.com/aschey/maybe-async-rs", rev = "36bb795e18e88aa0642164934d50d8c5ee05e26f", features = ["default_sync"]}
