--- a/daemon-slayer-server/Cargo.toml
+++ b/daemon-slayer-server/Cargo.toml
@@ -6,12 +6,12 @@ version = "0.1.0"
 [features]
 async-tokio = ["tokio", "signal-hook-tokio", "async-trait", "futures", "daemon-slayer-macros/async", "maybe-async/is_async"]
 direct = ["signal-hook", "daemon-slayer-macros/direct"]
-logging = ["tracing-appender", "tracing-error", "tracing-subscriber", "tracing-eventlog", "time"]
+logging = ["tracing-appender", "tracing-error", "tracing-subscriber", "tracing-eventlog", "time", "directories"]
 
 [dependencies]
 async-trait = {version = "0.1.57", optional = true}
 daemon-slayer-macros = {path = "../daemon-slayer-macros", default-features = false}
-directories = "4.0.1"
+directories = {version = "4.0.1", optional = true}
 futures = {version = "0.3.23", optional = true}
 maybe-async = {git = "https://github.com/aschey/maybe-async-rs", rev = "36bb795e18e88aa0642164934d50d8c5ee05e26f", features = ["default_sync"]}
 time = {version = "0.3.13", optional = true}
@@ -21,7 +21,6 @@ tracing-error = {version = "0.2.0", optional = true}
 tracing-subscriber = {version = "0.3.15", features = ["local-time", "env-filter"], optional = true}
 
 [target.'cfg(windows)'.dependencies]
-regex = "1.6.0"
 signal-hook = {version = "0.3.14", optional = true}
 tokio = {version = "1.20.1", features = ["rt-multi-thread", "signal"], optional = true}
 tracing-eventlog = {git = "https://github.com/aschey/tracing-eventlog", rev = "e87ec17edfb374101e1a9bda14b0e5b534d1cc56", optional = true}
