--- a/daemon-slayer-cli/Cargo.toml
+++ b/daemon-slayer-cli/Cargo.toml
@@ -12,15 +12,18 @@ direct = []
 server = ["daemon-slayer-server"]
 
 [dependencies]
+ansi-to-tui = "1.0.1"
 async-trait = {version = "0.1.57", optional = true}
 clap = {version = "3.2.17", features = ["cargo"]}
-crossterm = {version = "0.25.0", optional = true}
+crossterm = {version = "0.25.0", optional = true, features = ["event-stream"]}
 daemon-slayer-client = {path = "../daemon-slayer-client", optional = true}
 daemon-slayer-server = {path = "../daemon-slayer-server", optional = true}
 eyre = "0.6.8"
 futures = {version = "0.3.23", optional = true}
 maybe-async = {git = "https://github.com/aschey/maybe-async-rs", rev = "36bb795e18e88aa0642164934d50d8c5ee05e26f", features = ["default_sync"]}
+parity-tokio-ipc = "0.9.0"
 time = {version = "0.3.13", optional = true}
-tokio = {version = "1.20.1", features = ["rt-multi-thread"], optional = true}
+tokio = {version = "1.20.1", features = ["rt-multi-thread", "macros"], optional = true}
 tracing = "0.1.36"
-tui = {git = "https://github.com/fdehau/tui-rs", rev = "02213a25a8f0779662dfbbbca98990715177ecc5", optional = true}
+# tui = {path = "../../tui-rs", optional = true}
+tui = {version = "0.18", optional = true}
