--- a/daemon-slayer-server/Cargo.toml
+++ b/daemon-slayer-server/Cargo.toml
@@ -14,6 +14,8 @@ daemon-slayer-macros = {path = "../daemon-slayer-macros", default-features = fal
 directories = {version = "4.0.1", optional = true}
 futures = {version = "0.3.23", optional = true}
 maybe-async = {git = "https://github.com/aschey/maybe-async-rs", rev = "36bb795e18e88aa0642164934d50d8c5ee05e26f", features = ["default_sync"]}
+once_cell = "1.14.0"
+parity-tokio-ipc = "0.9.0"
 time = {version = "0.3.13", optional = true}
 tracing = "0.1.36"
 tracing-appender = {version = "0.2.2", optional = true}
@@ -22,14 +24,14 @@ tracing-subscriber = {version = "0.3.15", features = ["local-time", "env-filter"
 
 [target.'cfg(windows)'.dependencies]
 signal-hook = {version = "0.3.14", optional = true}
-tokio = {version = "1.20.1", features = ["rt-multi-thread", "signal"], optional = true}
+tokio = {version = "1.20.1", features = ["rt-multi-thread", "signal", "net"], optional = true}
 tracing-eventlog = {git = "https://github.com/aschey/tracing-eventlog", rev = "e87ec17edfb374101e1a9bda14b0e5b534d1cc56", optional = true}
 windows-service = {git = "https://github.com/aschey/windows-service-rs", rev = "467408c9aba7d8221e5cf5a9992765ad7abeeb55"}
 
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3.14"
 signal-hook-tokio = {version = "0.3.1", features = ["futures-v0_3"], optional = true}
-tokio = {version = "1.20.1", features = ["rt-multi-thread"], optional = true}
+tokio = {version = "1.20.1", features = ["rt-multi-thread", "net", "io-util", "sync"], optional = true}
 
 [target.'cfg(target_os="linux")'.dependencies]
 sd-notify = "0.4.0"
