--- a/daemon-slayer-cli/Cargo.toml
+++ b/daemon-slayer-cli/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.1.0"
 [features]
 async-tokio = ["tokio", "async-trait", "futures", "maybe-async/is_async"]
 client = ["daemon-slayer-client"]
-console = ["tui", "crossterm"]
+console = ["tui", "crossterm", "daemon-slayer-logging"]
 default = ["client", "server", "console"]
 direct = []
 server = ["daemon-slayer-server"]
@@ -17,6 +17,7 @@ async-trait = {version = "0.1.57", optional = true}
 clap = {version = "3.2.17", features = ["cargo"]}
 crossterm = {version = "0.25.0", optional = true, features = ["event-stream"]}
 daemon-slayer-client = {path = "../daemon-slayer-client", optional = true}
+daemon-slayer-logging = {path = "../daemon-slayer-logging", optional = true}
 daemon-slayer-server = {path = "../daemon-slayer-server", optional = true}
 eyre = "0.6.8"
 futures = {version = "0.3.23", optional = true}
