--- a/daemon-slayer-logging/Cargo.toml
+++ b/daemon-slayer-logging/Cargo.toml
@@ -4,7 +4,7 @@ name = "daemon-slayer-logging"
 version = "0.1.0"
 
 [features]
-async-tokio = ["tokio", "async-trait", "futures", "maybe-async/is_async"]
+async-tokio = ["tokio", "async-trait", "futures", "maybe-async/is_async", "tracing-ipc"]
 
 [dependencies]
 async-trait = {version = "0.1.57", optional = true}
@@ -17,10 +17,11 @@ time = "0.3.14"
 tracing = "0.1.36"
 tracing-appender = {version = "0.2.2"}
 tracing-error = {version = "0.2.0"}
+tracing-ipc = {git = "https://github.com/aschey/tracing-ipc", rev = "0546f0623bbdd97979086cdd483d4ac98a849fa8", optional = true}
 tracing-subscriber = {version = "0.3.15", features = ["local-time", "env-filter"]}
 
 [target.'cfg(windows)'.dependencies]
-tokio = {version = "1.20.1", features = ["rt-multi-thread", "signal", "net"], optional = true}
+tokio = {version = "1.20.1", features = ["rt-multi-thread", "signal", "net", "io-util", "sync"], optional = true}
 tracing-eventlog = {git = "https://github.com/aschey/tracing-eventlog", rev = "e87ec17edfb374101e1a9bda14b0e5b534d1cc56"}
 windows-service = {git = "https://github.com/aschey/windows-service-rs", rev = "467408c9aba7d8221e5cf5a9992765ad7abeeb55"}
 
