--- a/daemon-slayer-cli/Cargo.toml
+++ b/daemon-slayer-cli/Cargo.toml
@@ -4,19 +4,18 @@ name = "daemon-slayer-cli"
 version = "0.1.0"
 
 [features]
-async-tokio = ["tokio", "async-trait", "futures", "maybe-async/is_async", "tracing-ipc"]
+async-tokio = ["tokio", "async-trait", "futures", "maybe-async/is_async"]
 client = ["daemon-slayer-client"]
-console = ["tui", "crossterm", "daemon-slayer-logging"]
+console = ["daemon-slayer-console"]
 default = ["client", "server", "console"]
 direct = []
 server = ["daemon-slayer-server"]
 
 [dependencies]
-ansi-to-tui = "1.0.1"
 async-trait = {version = "0.1.57", optional = true}
 clap = {version = "3.2.17", features = ["cargo"]}
-crossterm = {version = "0.25.0", optional = true, features = ["event-stream"]}
 daemon-slayer-client = {path = "../daemon-slayer-client", optional = true}
+daemon-slayer-console = {path = "../daemon-slayer-console", optional = true}
 daemon-slayer-logging = {path = "../daemon-slayer-logging", optional = true}
 daemon-slayer-server = {path = "../daemon-slayer-server", optional = true}
 eyre = "0.6.8"
@@ -26,6 +25,3 @@ parity-tokio-ipc = "0.9.0"
 time = {version = "0.3.13", optional = true}
 tokio = {version = "1.20.1", features = ["rt-multi-thread", "macros"], optional = true}
 tracing = "0.1.36"
-tracing-ipc = {git = "https://github.com/aschey/tracing-ipc", rev = "0546f0623bbdd97979086cdd483d4ac98a849fa8", optional = true}
-# tui = {path = "../../tui-rs", optional = true}
-tui = {version = "0.18", optional = true}
