--- a/Makefile.toml
+++ b/Makefile.toml
@@ -13,6 +13,23 @@ command = "cargo"
 install_crate = "cargo-hack"
 
 [tasks.build-all]
-args = ["hack", "--feature-powerset", "--no-dev-deps", "build"]
+args = [
+  "hack",
+  "--feature-powerset",
+  "--exclude-features",
+  "cli client server console direct logging server async-tokio",
+  "--no-dev-deps",
+  "build",
+]
 command = "cargo"
 install_crate = "cargo-hack"
+
+[tasks.examples]
+script = '''
+cargo build --example=async_client --features=async-client
+cargo build --example=async_combined --features=all
+cargo build --example=async_server --features=async-server
+cargo build --example=sync_client --features=sync-client
+cargo build --example=sync_combined --features=all-sync
+cargo build --example=sync_server --features=sync-server
+'''
