--- a/daemon-slayer-cli/Cargo.toml
+++ b/daemon-slayer-cli/Cargo.toml
@@ -4,17 +4,18 @@ name = "daemon-slayer-cli"
 version = "0.1.0"
 
 [features]
-all = ["async-tokio", "client", "console", "direct", "server"]
-all-sync = ["client", "direct", "server"]
+all-async = ["async-tokio", "client", "console", "direct", "server"]
+all-sync = ["client", "direct", "server", "blocking"]
 async-client = ["async-tokio", "client", "console", "direct"]
 async-server = ["async-tokio", "server", "direct"]
-async-tokio = ["tokio", "async-trait", "futures", "maybe-async/is_async"]
+async-tokio = ["tokio", "async-trait", "futures"]
+blocking = ["daemon-slayer-server/blocking"]
 client = ["daemon-slayer-client"]
 console = ["daemon-slayer-console", "async-tokio"]
 direct = []
 server = ["daemon-slayer-server"]
-sync-client = ["client", "direct"]
-sync-server = ["server", "direct"]
+sync-client = ["client", "direct", "blocking"]
+sync-server = ["server", "direct", "blocking"]
 
 [dependencies]
 async-trait = {version = "0.1.57", optional = true}
@@ -25,7 +26,7 @@ daemon-slayer-logging = {path = "../daemon-slayer-logging", optional = true}
 daemon-slayer-server = {path = "../daemon-slayer-server", optional = true}
 eyre = "0.6.8"
 futures = {version = "0.3.23", optional = true}
-maybe-async = {git = "https://github.com/aschey/maybe-async-rs", rev = "36bb795e18e88aa0642164934d50d8c5ee05e26f", features = ["default_sync"]}
+maybe-async-cfg = "0.2.3"
 parity-tokio-ipc = "0.9.0"
 time = {version = "0.3.13", optional = true}
 tokio = {version = "1.20.1", features = ["rt-multi-thread", "macros"], optional = true}
