--- a/daemon-slayer-server/Cargo.toml
+++ b/daemon-slayer-server/Cargo.toml
@@ -4,14 +4,15 @@ name = "daemon-slayer-server"
 version = "0.1.0"
 
 [features]
-async-tokio = ["tokio", "signal-hook-tokio", "async-trait", "futures", "daemon-slayer-macros/async", "maybe-async/is_async"]
+async-tokio = ["tokio", "signal-hook-tokio", "async-trait", "futures", "daemon-slayer-macros/async"]
+blocking = ["daemon-slayer-macros/blocking"]
 direct = ["signal-hook", "daemon-slayer-macros/direct"]
 
 [dependencies]
 async-trait = {version = "0.1.57", optional = true}
 daemon-slayer-macros = {path = "../daemon-slayer-macros", default-features = false}
 futures = {version = "0.3.23", optional = true}
-maybe-async = {git = "https://github.com/aschey/maybe-async-rs", rev = "36bb795e18e88aa0642164934d50d8c5ee05e26f", features = ["default_sync"]}
+maybe-async-cfg = "0.2.3"
 once_cell = "1.14.0"
 tracing = "0.1.36"
 
