--- a/daemon-slayer-logging/Cargo.toml
+++ b/daemon-slayer-logging/Cargo.toml
@@ -4,13 +4,12 @@ name = "daemon-slayer-logging"
 version = "0.1.0"
 
 [features]
-async-tokio = ["tokio", "async-trait", "futures", "maybe-async/is_async", "tracing-ipc"]
+async-tokio = ["tokio", "async-trait", "futures", "tracing-ipc"]
 
 [dependencies]
 async-trait = {version = "0.1.57", optional = true}
 directories = {version = "4.0.1"}
 futures = {version = "0.3.23", optional = true}
-maybe-async = {git = "https://github.com/aschey/maybe-async-rs", rev = "36bb795e18e88aa0642164934d50d8c5ee05e26f", features = ["default_sync"]}
 once_cell = "1.14.0"
 parity-tokio-ipc = "0.9.0"
 time = "0.3.14"
