--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ assert_cmd = "2.0.4"
 async-trait = {version = "0.1.57"}
 axum = "0.5.15"
 futures = {version = "0.3.23"}
-tokio = {version = "1.20.1", features = ["rt-multi-thread", "time"]}
+tokio = {version = "1.20.1", features = ["rt-multi-thread", "time", "macros"]}
 tower-http = {version = "0.3.4", features = ["trace"]}
 tracing = "0.1.36"
 tracing-subscriber = {version = "0.3.15", features = ["local-time", "env-filter"]}
@@ -74,4 +74,7 @@ name = "sync_server"
 required-features = ["sync-server"]
 [[example]]
 name = "axum"
+required-features = ["all-async"]
+[[example]]
+name = "errors"
 required-features = ["all-async"]
