--- a/daemon-slayer-cli/Cargo.toml
+++ b/daemon-slayer-cli/Cargo.toml
@@ -8,8 +8,8 @@ all-async = ["async-tokio", "client", "console", "direct", "server"]
 all-sync = ["client", "direct", "server", "blocking"]
 async-client = ["async-tokio", "client", "console", "direct"]
 async-server = ["async-tokio", "server", "direct"]
-async-tokio = ["tokio", "async-trait", "futures"]
-blocking = ["daemon-slayer-server/blocking"]
+async-tokio = ["tokio", "async-trait", "futures", "daemon-slayer-server/async-tokio", "daemon-slayer-client/async-tokio"]
+blocking = ["daemon-slayer-server/blocking", "daemon-slayer-client/blocking"]
 client = ["daemon-slayer-client"]
 console = ["daemon-slayer-console", "async-tokio"]
 direct = []
