--- a/daemon-slayer-client/Cargo.toml
+++ b/daemon-slayer-client/Cargo.toml
@@ -4,7 +4,10 @@ name = "daemon-slayer-client"
 version = "0.1.0"
 
 [dependencies]
+async-trait = "0.1.57"
 eyre = "0.6.8"
+maybe-async-cfg = "0.2.3"
+reqwest = "0.11.11"
 
 [target.'cfg(windows)'.dependencies]
 regex = "1.6.0"
@@ -16,3 +19,7 @@ systemd_client = {git = "https://github.com/aschey/systemd-client", rev = "a2e9f
 [target.'cfg(target_os = "macos")'.dependencies]
 directories = "4.0.1"
 launchd = "0.2.0"
+
+[features]
+async-tokio = []
+blocking = ["reqwest/blocking"]
