--- a/Makefile.toml
+++ b/Makefile.toml
@@ -12,25 +12,23 @@ args = ["hack", "--feature-powerset", "--no-dev-deps", "clippy", "--", "-D", "wa
 command = "cargo"
 install_crate = "cargo-hack"
 
+[tasks.build-extra]
+script = '''
+cargo build --features=ipc-health-check,http-health-check --examples
+cargo build --features=all-async,ipc-health-check,http-health-check --examples
+cargo build --features=all-sync,ipc-health-check,http-health-check --examples
+cargo build --features=all-async,all-sync,ipc-health-check,http-health-check --examples
+'''
+
 [tasks.build-all]
 args = [
   "hack",
   "--feature-powerset",
   "--exclude-features",
-  "cli client server console direct logging server async-tokio",
+  "cli client server console direct logging server async-tokio ipc-health-check http-health-check",
   "build",
   "--examples",
 ]
 command = "cargo"
+dependencies = ["build-extra"]
 install_crate = "cargo-hack"
-
-[tasks.examples]
-script = '''
-cargo build --example=async_client --features=async-client
-cargo build --example=async_combined --features=all
-cargo build --example=async_server --features=async-server
-cargo build --example=sync_client --features=sync-client
-cargo build --example=sync_combined --features=all-sync
-cargo build --example=sync_server --features=sync-server
-cargo build --example=axum --features=all
-'''
