--- a/daemon-slayer-client/Cargo.toml
+++ b/daemon-slayer-client/Cargo.toml
@@ -7,7 +7,9 @@ version = "0.1.0"
 async-trait = "0.1.57"
 eyre = "0.6.8"
 maybe-async-cfg = "0.2.3"
-reqwest = "0.11.11"
+parity-tokio-ipc = {version = "0.9.0", optional = true}
+reqwest = {version = "0.11.11", optional = true}
+tokio = {version = "1.20.1", features = ["net"]}
 
 [target.'cfg(windows)'.dependencies]
 regex = "1.6.0"
@@ -23,3 +25,5 @@ launchd = "0.2.0"
 [features]
 async-tokio = []
 blocking = ["reqwest/blocking"]
+http-health-check = ["reqwest"]
+ipc-health-check = ["parity-tokio-ipc", "async-tokio"]
