--- a/daemon-slayer-server/Cargo.toml
+++ b/daemon-slayer-server/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 async-tokio = ["tokio", "signal-hook-tokio", "async-trait", "futures", "daemon-slayer-macros/async"]
 blocking = ["daemon-slayer-macros/blocking"]
 direct = ["signal-hook", "daemon-slayer-macros/direct"]
+ipc-health-check = ["parity-tokio-ipc", "async-tokio"]
 
 [dependencies]
 async-trait = {version = "0.1.57", optional = true}
@@ -14,6 +15,7 @@ daemon-slayer-macros = {path = "../daemon-slayer-macros", default-features = fal
 futures = {version = "0.3.23", optional = true}
 maybe-async-cfg = "0.2.3"
 once_cell = "1.14.0"
+parity-tokio-ipc = {version = "0.9.0", optional = true}
 tracing = "0.1.36"
 
 [target.'cfg(windows)'.dependencies]
