--- a/daemon-slayer-client/Cargo.toml
+++ b/daemon-slayer-client/Cargo.toml
@@ -16,7 +16,8 @@ regex = "1.6.0"
 windows-service = {git = "https://github.com/aschey/windows-service-rs", rev = "467408c9aba7d8221e5cf5a9992765ad7abeeb55"}
 
 [target.'cfg(target_os="linux")'.dependencies]
-systemd_client = {git = "https://github.com/aschey/systemd-client", rev = "a2e9f15496c4fde07a45d982ffa04aab178445a1"}
+systemd_client = {path = "../../systemd-client"}
+#{git = "https://github.com/aschey/systemd-client", rev = "a2e9f15496c4fde07a45d982ffa04aab178445a1"}
 
 [target.'cfg(target_os = "macos")'.dependencies]
 directories = "4.0.1"
