--- a/daemon-slayer-client/Cargo.toml
+++ b/daemon-slayer-client/Cargo.toml
@@ -10,6 +10,8 @@ maybe-async-cfg = "0.2.3"
 parity-tokio-ipc = {version = "0.9.0", optional = true}
 reqwest = {version = "0.11.11", optional = true}
 tokio = {version = "1.20.1", features = ["net"]}
+tonic = {version = "0.8.1", optional = true}
+tonic-health = {version = "0.7.1", optional = true}
 
 [target.'cfg(windows)'.dependencies]
 regex = "1.6.0"
@@ -27,5 +29,6 @@ regex = "1.6.0"
 [features]
 async-tokio = []
 blocking = ["reqwest/blocking"]
+grpc-health-check = ["tonic", "tonic-health", "async-tokio"]
 http-health-check = ["reqwest"]
 ipc-health-check = ["parity-tokio-ipc", "async-tokio"]
