--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,8 @@ name: CI
 
 jobs:
   test:
+    env: 
+      PROTOC: $HOME/protoc/bin/protoc
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
@@ -29,7 +31,7 @@ jobs:
       - name: test
         run: |
           curl -LO https://github.com/protocolbuffers/protobuf/releases/download/v3.19.4/protoc-3.19.4-${{ matrix.protoc-target }}.zip
-          unzip protoc-3.19.4-linux-x86_64.zip -d "$HOME/protoc"
+          unzip protoc-3.19.4-${{ matrix.protoc-target }}.zip -d "$HOME/protoc"
           cargo install cargo-hack
           cargo install cargo-make
           cargo make build-powerset
